--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,7 +1,11 @@
-@use 'variable' as *;
-h1 {
-    color: $h1Color;
+@use "variable" as *;
+
+.card-courses-item {
+  margin-top: 15px;
 }
-h2 {
-    color: $h2Color;
+.user-avatar {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 4px;
 }
